2013-07-16  Paul Eggert  <eggert@cs.ucla.edu>

	Fix bug where Emacs tries to close a file twice (Bug#14839).
	* fileio.c (close_file_unwind): Don't close if FD is negative;
	this can happen when unwinding a zapped file descriptor.
	(Finsert_file_contents): Unwind-protect the fd before the point marker,
	in case Emacs runs out of memory between the two unwind-protects.
	Don't trash errno when closing FD.
	Zap the FD in the specpdl when closing it, instead of deferring
	the removal of the unwind-protect; this fixes a bug where a child
	function unwinds the stack past us.

	New unwind-protect flavors to better type-check C callbacks.
	This also lessens the need to write wrappers for callbacks,
	and the need for make_save_pointer.
	* alloca.c (free_save_value):
	* atimer.c (run_all_atimers):
	Now extern.
	* alloc.c (safe_alloca_unwind):
	* atimer.c (unwind_stop_other_atimers):
	* keyboard.c (cancel_hourglass_unwind) [HAVE_WINDOW_SYSTEM]:
	* menu.c (cleanup_popup_menu) [HAVE_NS]:
	* minibuf.c (choose_minibuf_frame_1):
	* process.c (make_serial_process_unwind):
	* xdisp.h (pop_message_unwind):
	* xselect.c (queue_selection_requests_unwind):
	Remove no-longer-needed wrapper.  All uses replaced by the wrappee.
	* alloca.c (record_xmalloc):
	Prefer record_unwind_protect_ptr to record_unwind_protect with
	make_save_pointer.
	* alloca.c (Fgarbage_collect):
	Prefer record_unwind_protect_void to passing a dummy.
	* buffer.c (restore_buffer):
	* window.c (restore_window_configuration):
	* xfns.c, w32fns.c (do_unwind_create_frame)
	New wrapper.  All record-unwind uses of wrappee changed.
	* buffer.c (set_buffer_if_live):
	* callproc.c (call_process_cleanup, delete_temp_file):
	* coding.c (code_conversion_restore):
	* dired.c (directory_files_internal_w32_unwind) [WINDOWSNT]:
	* editfns.c (save_excursion_restore)
	(subst_char_in_region_unwind, subst_char_in_region_unwind_1)
	(save_restriction_restore):
	* eval.c (restore_stack_limits, un_autoload):
	* fns.c (require_unwind):